--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
